--- a/_data/locales/ko-KR-default.yml
+++ b/_data/locales/ko-KR-default.yml
@@ -3,18 +3,18 @@
 # ----- Commons label -----
 
 layout:
-  post: Post
+  post: 포스트
   category: 카테고리
   tag: 태그
 
 # The tabs of sidebar
 tabs:
   # format: <filename_without_extension>: <value>
-  home: Home
-  categories: Categories
-  tags: Tags
-  archives: Archives
-  about: About
+  home: 홈
+  categories: 카테고리
+  tags: 태그
+  archives: 아카이브
+  about: 정보
 
 # the text displayed in the search bar & search results
 search:
@@ -23,7 +23,7 @@ search:
   no_results: 검색 결과가 없습니다.
 
 panel:
-  lastmod: Recently Updated
+  lastmod: 최근 업데이트
   trending_tags: 인기 태그
   toc: 바로가기
 
@@ -35,12 +35,12 @@ copyright:
     link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: Some rights reserved.
+  brief: 일부 권리 보유
   verbose: >-
     명시되지 않는 한 이 사이트의 블로그 게시물은 작성자의
     Creative Commons Attribution 4.0 International(CC BY 4.0) 라이선스에 따라 사용이 허가되었습니다.
 
-# meta: Powered by :PLATFORM with :THEME theme
+meta: Powered by :PLATFORM with :THEME theme
 
 not_found:
   statment: 해당 URL은 존재하지 않습니다.
@@ -55,11 +55,11 @@ post:
   written_by: By
   posted: 게시
   updated: 업데이트
-  words: words
-  pageview_measure: views
+  words: 단어
+  pageview_measure: 조회
   read_time:
-    unit: min
-    prompt: read
+    unit: 분
+    prompt: 읽는 시간
   relate_posts: 관련된 글
   share: 공유하기
   button:
