--- a/_data/locales/ko-KR.yml
+++ b/_data/locales/ko-KR.yml
@@ -30,15 +30,15 @@ panel:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: 이 기사는 저작권자의 :LICENSE_NAME 라이센스를 따릅니다.
+    template: This post is licensed under :LICENSE_NAME by the author.
     name: CC BY 4.0
     link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
   brief: Some rights reserved.
   verbose: >-
-    명시되지 않는 한 이 사이트의 블로그 게시물은 작성자의
-    Creative Commons Attribution 4.0 International(CC BY 4.0) 라이선스에 따라 사용이 허가되었습니다.
+    Except where otherwise noted, the blog posts on this site are licensed
+    under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
 # meta: Powered by :PLATFORM with :THEME theme
 
